@@ -17,13 +17,17 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
     implementation 'com.google.guava:guava:30.1.1-jre'
 
+    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.3.0-alpha13'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.3.0-alpha13'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha7'
+
     implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.0'
 
-    implementation ('org.controlsfx:controlsfx:11.1.2') {
-        because 'text auto-completion for search field'
-    }
+    // implementation ('org.controlsfx:controlsfx:11.1.2') {
+    //     because 'text auto-completion for search field'
+    // }
 
-    implementation 'org.kordamp.ikonli:ikonli-fontawesome5-pack:12.3.1' // cheat-sheet here https://kordamp.org/ikonli/cheat-sheet-fontawesome5.html
+    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1' // cheat-sheet here https://kordamp.org/ikonli/cheat-sheet-materialdesign2.html
     implementation('org.kordamp.ikonli:ikonli-javafx:12.3.1' ) {
         because 'icons for buttons, controlsfx implementation is very limited'
     }
@@ -36,7 +40,11 @@ dependencies {
 }
 
 application {
-    mainClass = 'jmail.client.Main'
+    mainClass = 'jmail.client.Launcher'
+    applicationDefaultJvmArgs = [
+        '--add-opens=javafx.controls/javafx.scene.control=ALL-UNNAMED',
+        '--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED'
+    ]
 }
 
 javafx {
@@ -60,9 +68,9 @@ spotless {
 
     java {
         importOrder() // Use the default importOrder configuration
+        palantirJavaFormat()
         removeUnusedImports()
-        googleJavaFormat()
-        formatAnnotations()
+        formatAnnotations().addTypeAnnotation("FXML")
     }
 
     groovyGradle {
